# mementor

./: .gitattributes  AGENTS.md  Cargo.toml  LICENSE  README.md  deno.json  mise.toml
.claude/: settings.json
crates/mementor-lib/: Cargo.toml  build.rs
crates/mementor-lib/ddl/: schema.sql
crates/mementor-lib/ddl/migrations/: 00001__initial_schema.sql  00002__schema_redesign.sql
crates/mementor-lib/src/: ai_search.rs  ai_search_prompt.md  cache.rs  config.rs  context.rs  git.rs  lib.rs  output.rs  search.rs  test_util.rs
crates/mementor-lib/src/db/: connection.rs  queries.rs  schema.rs
crates/mementor-lib/src/embedding/: embedder.rs
crates/mementor-lib/src/entire/: checkpoint.rs  cli.rs  mod.rs  transcript.rs
crates/mementor-lib/src/git/: branch.rs  command.rs  diff.rs  log.rs  mod.rs  tree.rs  worktree.rs
crates/mementor-lib/src/model/: checkpoint.rs  mod.rs  transcript.rs
crates/mementor-lib/src/pipeline/: chunker.rs  ingest.rs  mod.rs  query.rs
crates/mementor-lib/src/transcript/: parser.rs  types.rs
crates/mementor-lib/tests/: schema_snapshot.rs
crates/mementor-main/: Cargo.toml
crates/mementor-main/src/: main.rs
crates/mementor-poc-embedding/: Cargo.toml
crates/mementor-poc-embedding/src/: main.rs
crates/mementor-tui/: Cargo.toml
crates/mementor-tui/src/: app.rs
crates/mementor-tui/src/views/: branch_popup.rs  dashboard.rs  detail.rs  diff_view.rs  git_log.rs  mod.rs  search.rs  status_bar.rs  text_utils.rs  transcript.rs
docs/: rust-coding-conventions.md  testing-patterns.md  transcript-jsonl.md
history/: 2026-02-17_file-logging.md  2026-02-17_log-filter-and-compaction.md  2026-02-18_file-aware-hybrid-recall.md  2026-02-18_fix-ci-lfs-budget.md  2026-02-18_fix-settings-json-overwrite.md  2026-02-18_fix-settings-key-order.md  2026-02-18_improve-recall-quality.md  2026-02-18_metadata-driven-recall.md  2026-02-18_recall-quality-v2.md  2026-02-18_revise-workflow-section.md  2026-02-18_thinking-block-indexing.md  2026-02-18_tool-context-enrichment.md  2026-02-18_workflow-and-permissions.md  2026-02-19_access-pattern-centroids.md  2026-02-19_file-aware-hybrid-search.md  2026-02-19_metadata-driven-recall.md  (+26 more)
(+232 files in other folders)
