[package]
name = "mementor-lib"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["process", "sync", "macros", "rt-multi-thread"] }
jiff = "0.2"

[dev-dependencies]
tempfile = "3"
