[package]
name = "mementor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1"
mementor-lib = { path = "../mementor-lib" }
mementor-tui = { path = "../mementor-tui" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
