[package]
name = "mementor-poc-embedding"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.101"
dirs = "6.0.0"
fastembed = { version = "5.9.0", default-features = false, features = [
    "hf-hub-native-tls",
] }
hf-hub = { version = "0.5.0", default-features = false, features = ["native-tls", "ureq"] }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
fastembed = { version = "5.9.0", default-features = false, features = [
    "ort-download-binaries",
] }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
fastembed = { version = "5.9.0", default-features = false, features = [
    "ort-load-dynamic",
] }
