[package]
name = "mementor-tui"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
mementor-lib = { path = "../mementor-lib" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.32"
jiff = "0.2.21"
